--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -931,4 +931,264 @@ Array& Array::operator=(Array &a) {
 <article class="article">
   <div class="anchor" id="p7"></div>
   <h3>Урок 7</h3>
+
+  <h4>Ключевое слово const</h4>
+
+  <p>Три варианта расположения const</p>
+  <ol>
+    <li>
+      <p>Константная переменная. Изменить значение нельзя.</p>
+      <code>const char n = 10;</code>
+      <code>n = 15; // не скомпилируется</code>
+    </li>
+    <li>
+      <p>Указатель на константное значение. Значение *c менять нельзя. Поменять адрес можно, чтобы переменная c указывала на другой адрес.</p>
+      <code>const char *c;</code>
+      <code>char const *c;</code>
+      <code>c[1] = 'a'; // не скомпилируется</code>
+      <code>c = c1; // так можно</code>
+    </li>
+    <li>
+      <p>Константный указатель. Поменять адрес нельзя. Значение *c поменять можно.</p>
+      <code>char * const c;</code>
+      <code>c = c1; // не скомпилируется</code>
+      <code>c[1] = 'a'; // так можно</code>
+    </li>
+    <li>
+      <p>Константные указатель на константное значение. Их менять нельзя.</p>
+      <code>const char * const c;</code>
+    </li>
+    <li>
+      <p>Массив это как константный указатель. Имя массива указывает на адрес памяти, но этот адрес менять нельзя. Поэтому запись</p>
+      <code>char ss[10];</code>
+      <p>аналогична константному указателю</p>
+      <code>char * const</code>
+    </li>
+    <li>
+      <p>Ссылка это как константный указатель, за исключением того что указатель может равняться NULL.</p>
+      <p>Ссылка в отличие от указателя не может быть равна NULL и всегда должна быть инициализирована.</p>
+      <p>Записи вида</p>
+      <code>int& ref;</code>
+      <p>аналогична записи</p>
+      <code>int* const ref;</code>
+    </li>
+    <li>
+      <p>Константное поле внутри класса.</p>
+      <p>Внутри класса тоже может быть константа, то так как она должна быть инициализирована, то инициализировать ее можно в конструкторе в списке инициализации. А при копировании объектов, константа инициализируется в конструкторе копирования в списке инициализации. А вот оператор присваивания мы определить не можем, потому что в нем нет списка инициализации и константу невозможно будет инициализировать.</p>
+<pre>
+class Array {
+private:
+  const int mySize;
+public:
+  Array(int size): mySize(size) {}
+  Array(Array& a): mySize(size) {}
+}
+</pre>
+    </li>
+    <li>Константный параметр функции или метода класса.
+<pre>
+Array(const Array& a) {
+  const Array* const a;
+}
+Array b(10);
+Array &a = b;
+Array &a = c; // не скомпилируется
+</pre>
+    </li>
+    <li>Константное возвращаемое значение функции
+<pre>
+const Array& operator=(const Array &a)
+</pre>
+    </li>
+    <li>
+      <p>const у метода означает что метод не меняет поля класса, а только их читает.</p>
+<pre>
+int getSize() const;
+int get(int index) const;
+</pre>
+    </li>
+  </ol>
+
+  <p>Пример константный данных:</p>
+  <code>char *s = "aaa";</code>
+  <p>Строка "aaa" будет размещена в константной области памяти, которую менять нельзя. Поэтому s[0] = 'b'; не скомпилируется.</p>
+
+  <p>Пример константного адреса:</p>
+  <code>char s1[] = "bbb";</code>
+  <p>Строка "bbb" будет размещена на стеке, поэтому можно поменять любой символ этой строки s1[1] = 'a';. Но поскольку s1 это массив, то его нельзя переприсвоить другому значению. s1 = s2; не скомпилируется</p>
+  <p>Константы контроллируются только на этапе компиляции. В объектном коде никаких консант уже нет, соответственно нет проверок, что константа может измениться.</p>
+
+  <p>Файл go.h</p>
+<pre>
+extern const int X_WIN;
+extern const int Y_WIN;
+extern const int DRAW;
+extern const int NO_WIN;
+</pre>
+
+  <p>Файл go.cpp</p>
+<pre>
+const int X_WIN = 1;
+const int Y_WIN = 2;
+const int DRAW = 3;
+const int NO_WIN = 4;
+
+int isWin() {
+  if (...) {
+    return X_WIN;
+  } else if (...) {
+    return Y_WIN;
+  } else if (...) {
+    return DRAW;
+  } else if (...) {
+    return 3; // так скомпилируется
+  }
+}
+</pre>
+
+  <p>Если мы хотим, чтобы функция isWin возвращала только одно из перечислинных четырех значений, то можно создать новый тип данных с помощью enum. Это нужно, чтобы был более понятный код.</p>
+
+<pre>
+enum {X_WIN, Y_WIN, DRAW, NO_WIN} WinType;
+WinType isWin() {
+  return 3; // так не скомпилируется
+}
+</pre>
+
+  <p>Пример 1. Так делать нельзя. Внутри функции создается массив и память для него выделяется на стеке. После выхода из функции массив уничтожается. А указателю b присваивается адрес чужих данных.</p>
+<pre>
+int *f() {
+  int a[100];
+  a[0] = 1;
+  return a;
+
+}
+int main() {
+  int *b = f();
+  b[0] = 100;
+}
+</pre>
+
+  <p>Пример 2. Так делать правильно. Внутри функции динамически выделяется память в куче (heap) и создается указатель который указывает на нее. При выходе из функции указатель уничтожается, а выделенная память остается. Указатель на нее возвращается в функцию main и присваивается указателю b.</p>
+<pre>
+int* f() {
+  int *a = new int[100];
+  a[0] = 1;
+  return a;
+}
+
+int main() {
+  int* b = f();
+  b[0] = 10;
+  delete [] b;
+}
+</pre>
+
+  <p>Пример 3.</p>
+<pre>
+class Array {
+private:
+  int myData[100];
+
+public:
+  int *getData() {
+    return myData;
+  }
+}
+
+int main() {
+  Array a;
+  int *b = &getData();
+}
+</pre>
+</article>
+
+
+<!-- Урок 8 -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>Урок 8</h3>
+
+  <p>Преподаватель Александр Смаль.</p>
+
+  <h3>Компиляция программы на языках C++ и Си</h3>
+
+  <p>Мы пишем текст программы на языке C++ в текстовых файлах с расширением .cpp. Когда мы запускаем компилятор, то происходит следующее:</p>
+  <ol>
+    <li>Препроцессор из файла .cpp делает файл .cpp в котором уже не содержится никаких инструкций для препроцессора. Получается файл без #.</li>
+    <li>Транслятор из файла .cpp без # переводит код программы с одного языка на другой и получается файл на языке ассемблера.</li>
+    <li>
+      <p>Здесь есть небольшая путаница. Потому что есть язык ассемблер, а есть программа Ассемблер, которая из языка Ассемблера делает двоичный код. Программа Ассемблера переводит программу на языке ассемблера в программу в машинных кодах. Получается бинарный файл с расширением .obj.</p>
+      <p>В объектном коде есть таблица всех функций, которые есть в этом объектном файле.</p>
+      <p>В объектном файле имена локальных переменных заменяются на их адреса. Остаются только имена глобальных переменных, которые можно использовать между файлами.</p>
+    </li>
+    <li>
+      <p>Из каждого .cpp файла получается свой .obj файл. Чтобы получить из них один исполняемый файл, нужна программа линковка. Линковщик собирает все полученные .obj файлы вместе и на выходе выдает один исполняемый файл .exe.</p>
+      <p>Линковщик собирает все таблицы функций со всех объектных файлов и знает какая функция в каком файле описана. После этого ему нужно пройтись по исполняемому коду и посмотреть где какая функция вызывается. Если он видит вызов функции, то смотрит в табличку, находит такую же функцию и подставляет в место вызова вместо имени функции конкретный адрес этой функции в памяти. В исполняемом файле уже имен функций нету.</p>
+      <p>Имена глобальных переменных заменяются на их адреса.</p>
+      <p>В исполняемом коде нет не только имен функций, но и имен переменных.</p>
+    </li>
+  </ol>
+
+  <p>В языке C++ можно писать функции с одинаковым именем и разной сигнатурой. Например, void f(int) и void f(double). Тогда в таблице будут записаны две разные функции и имена у них будут тоже разные.</p>
+  <p>Так происходит только в языке C++, потому что в языке Си нельзя иметь две разные функции с одинаковым названием. Весь процесс компиляции в языке Си будет точно такой же за одним исключением. Имена функций останутся такими же какие они были в файле cpp.</p>
+  <p>Файл объектного кода можно открывать и смотреть какие функции в нем определены.</p>
+
+  <h3>Глобальные переменные</h3>
+  <p>У нас есть 2 файла 1.cpp и 2.cpp. Мы хотим чтобы у нас был счетчик, который можно использовать одновременно в этих двух файлах.</p>
+
+  <p>Файл 1.cpp</p>
+  <code>int c = 0;</code>
+
+  <p>Файл 2.cpp</p>
+<pre>
+extern int c;
+void f() {
+  c = c + 1;
+}
+</pre>
+
+  <p>Эти файлы скомпилируются. На этапе линковке вместо глобальных переменных подставятся их адреса. Если не написать слово extern, то файлы тоже скомпилируются. Но произойдет ошибка на этапе линковке, потому что есть две глобальные переменные с одинаковым именем.</p>
+  <p>Если мы хотим использовать переменную c еще в каком-то файле, то можно ее объявление extern int c; вынести в отдельный заголовочный файл и подключать его там где она нужна.</p>
+
+  <h3>Ключевое слово static</h3>
+
+  <p>Ключевое слово static имеет пять различных значений:</p>
+  <ol>
+    <li>
+      <h4>Глобальные static переменные</h4>
+      <p>Можно создать глобальную переменную с одим из двух уровней видимости. Глобальная переменная видна везде:</p>
+      <code>int a = 0;</code>
+      <p>Глобальная переменная видна только в том файле, где объявлена:</p>
+      <code>static int b = 0;</code>
+      <p>Создадим два файла 1.cpp и 2.cpp. Создадим в них глобальные переменные разным способом но с одинаковым именем. Во втором файле, переменная a является глобальной для всего проекта, а в первом файле, переменная a является глобальной только для файла 1.cpp.</p>
+
+      <p>Файл 1.cpp</p>
+      <code>static int a = 0;</code>
+
+      <p>Файл 2.cpp</p>
+      <code>int a = 0;</code>
+
+      <p>Линковка происходит в два этапа: внутренняя (internel) и внешняя (external). Сначала линковщик в каждом объектном модуле создает таблицу, в которой именам переменных и функций сопоставляет их адреса. После этого он проводит внутреннюю линковку. Оставшиеся в модулях глобальные имена заменяются их адресами в результате внешней линковки.</p>
+      <p>Создадим заголовочный файл 3.h и создадим в нем глобальную статическую переменную. Подключим этот заголовочный файл в несколько cpp файлов.</p>
+
+      <p>Файл 4.h</p>
+      <code>static int k = 0;</code>
+
+      <p>Файл 1.cpp</p>
+      <code>#include "4,h"</code>
+
+      <p>Файл 2.cpp</p>
+      <code>#include "4,h"</code>
+
+      <p>Файл 3.cpp</p>
+      <code>#include "4,h"</code>
+
+      <p>При этом в каждом файле создастся своя переменная k. И это будут три разные переменные.</p>
+    </li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
 </article>
