--- a/src/components/alg/alg-pract/allcups/pages/elem-allcups-01.html
+++ b/src/components/alg/alg-pract/allcups/pages/elem-allcups-01.html
@@ -1,20 +1,346 @@
 <article class="article">
   <h1>All Cups</h1>
   <p><a href="https://cups.online/ru/" target="_blank">cups.online</a></p>
+  <p>IT-Соревнования для специалистов и начинающих</p>
 </article>
 
 
 <!-- Содержание -->
 <article class="article">
-  <h2>Содержание</h2>
+  <h3>Содержание</h3>
 
       <a href="#p1">Как решать</a>
+  <br><a href="#p2">Соревнования</a>
+  <br><a href="#p3">Алгоритмы и структуры данных</a>
+  <br><a href="#p4">Задача A. Списывание в школе</a>
+  <br><a href="#p5">Задача B. Очистка эксперимента</a>
+  <br><a href="#p6">Задача C. Рекорд забега</a>
+  <br><a href="#p7">Задача D. Ближайшие соседи</a>
+  <br><a href="#p8">Задача E. Контроль качества</a>
 </article>
 
 
 <!-- Как решать -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h2>Как решать</h2>
+  <h3>Как решать</h3>
 
+</article>
+
+
+<!-- Соревнования -->
+<article class="article">
+  <div class="anchor" id="p2"></div>
+  <h3>Соревнования</h3>
+
+</article>
+
+
+<!-- Алгоритмы и структуры данных -->
+<article class="article">
+  <div class="anchor" id="p3"></div>
+  <h3>Алгоритмы и структуры данных</h3>
+
+  <p>Цель курса – освоить работу с алгоритмами и структурами данных, научиться решать фундаментальные алгоритмические задачи и повысить эффективность своих программ.</p>
+</article>
+
+
+<!-- Задача A. Списывание в школе -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>Задача A. Списывание в школе</h3>
+
+  <p>В школе прошёл экзамен по математике. Некоторые ученики списали решения, были замечены и получили 0 баллов. Помогите учителю пересортировать оценки учеников. Все оценки, равные 0, должны быть перемещены в конец списка, при этом порядок остальных оценок должен остаться неизменным.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке задаётся число N — размер массива (количество оценок). Во второй строке вводится массив из N целых чисел, разделённых пробелами.</p>
+
+  <h4>Выходные данные</h4>
+  <p>На выходе программа должна вывести строку из N элементов массива, где все нули перемещены в конец, а порядок остальных чисел сохранён. Значения разделяются пробелами.</p>
+
+  <details>
+    <summary>Тесты</summary>
+    <h4>Тест 1</h4>
+<pre>
+6
+0 0 1 0 3 12
+</pre>
+    <code>1 3 12 0 0 0</code>
+
+    <h4>Тест 2</h4>
+<pre>
+9
+0 0 0 18 16 0 0 77 99
+</pre>
+    <code>18 16 77 99 0 0 0 0 0</code>
+
+    <h4>Тест 3</h4>
+<pre>
+9
+0 33 57 88 60 0 0 80 99
+</pre>
+    <code>33 57 88 60 80 99 0 0 0</code>
+
+    <h4>Тест 4</h4>
+<pre>
+4
+0 0 0 100
+</pre>
+    <code>100 0 0 0</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  int n; // размер массива
+  cin >> n;
+  vector&lt;int&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // паттерн 2 указателя медленный и быстрый
+  int p1 = 0;
+  int p2 = 0;
+
+  while (p1 != n - 1 && p2 != n - 1) {
+    while (A[p1] != 0 && p1 != n - 1) {
+      p1++;
+    }
+    p2 = p1;
+    while (A[p2] == 0 && p2 != n - 1) {
+      p2++;
+    }
+    if (A[p1] == 0) {
+      A[p1] = A[p2];
+      A[p2] = 0;
+    }
+  }
+
+  for (int i = 0; i &lt; n; i++) {
+    cout &lt;&lt; A[i] &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача B. Очистка эксперимента -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>Задача B. Очистка эксперимента</h3>
+
+  <p>Учёные провели ряд экспериментов, но из-за неисправности оборудования некоторые результаты оказались ошибочными. Ошибочные результаты представлены числом element. Ваша задача — удалить все вхождения числа element из массива, сохранив порядок остальных чисел.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке задаётся число  N  — размер массива (количество элементов). Во второй строке вводится массив из  N  чисел, разделённых пробелами. В третьей строке задаётся число element, которое нужно удалить из массива.</p>
+
+  <h4>Выходные данные</h4>
+  <p>На выходе программа должна вывести строку из элементов массива, из которого удалены все вхождения числа element. Оставшиеся числа должны быть записаны через пробел.</p>
+
+  <details>
+    <summary>Тесты</summary>
+    <h4>Тест 1</h4>
+<pre>
+5
+1 2 4 0 11
+2
+</pre>
+    <code>1 4 0 11</code>
+
+    <h4>Тест 2</h4>
+<pre>
+4
+8 8 8 9
+8
+</pre>
+    <code>9</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  int n; // размер массива
+  cin >> n;
+  vector&lt;int&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+  int element;
+  cin >> element;
+
+  // паттерн 2 указателя медленный и быстрый
+  int p1 = 0;
+  int p2 = 0;
+
+  while (p1 != n - 1 && p2 != n - 1) {
+    while (A[p1] != element && p1 != n - 1) {
+      p1++;
+    }
+    p2 = p1;
+    while (A[p2] == element && p2 != n - 1) {
+      p2++;
+    }
+    if (A[p1] == element) {
+      A[p1] = A[p2];
+      A[p2] = element;
+    }
+  }
+  if (A[p1] == element) {
+    cout &lt;&lt; '\n';
+  } else {
+    for (int i = 0; i &lt;= p1; i++) {
+      cout &lt;&lt; A[i] &lt;&lt; ' ';
+    }
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача C. Рекорд забега -->
+<article class="article">
+  <div class="anchor" id="p6"></div>
+  <h3>Задача C. Рекорд забега</h3>
+
+  <p>Прошла серия беговых соревнований Rock'n'Run. За каждый забег спортсмены получили очки. Ваша задача — найти наибольшее количество очков среди всех результатов.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке задаётся число N — размер массива (количество результатов). Во второй строке вводится массив из N целых чисел, разделённых пробелами.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Программа должна вывести одно число — максимальное значение из массива.</p>
+
+  <details>
+    <summary>Тесты</summary>
+    <h4>Тест 1</h4>
+<pre>
+5
+1 2 4 0 11
+</pre>
+    <code>11</code>
+
+    <h4>Тест 2</h4>
+<pre>
+4
+8 8 8 8
+</pre>
+    <code>8</code>
+
+    <h4>Тест 3</h4>
+<pre>
+5
+95 87 100 92 85
+</pre>
+    <code>100</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n; // размер массива
+  cin >> n;
+
+  int res;
+  cin >> res; // первое число из массива
+  n--;
+
+  while (n--) {
+    int in;
+    cin >> in;
+    if (in > res) {
+      res = in;
+    }
+  }
+
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача D. Ближайшие соседи -->
+<article class="article">
+  <div class="anchor" id="p7"></div>
+  <h3>Задача D. Ближайшие соседи</h3>
+
+  <p>Дан отсортированный массив положительных целых чисел. Необходимо найти такую пару соседних элементов, у которых абсолютная разница минимальна.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке задаётся число N — размер массива (количество элементов). Во второй строке вводится массив из N положительных целых чисел, разделённых пробелами.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Программа должна вывести два числа — значения пары соседних элементов с наименьшей абсолютной разницей, разделённые пробелом. Если таких пар несколько, вывести первую найденную.</p>
+
+  <details>
+    <summary>Тесты</summary>
+    <h4>Тест 1</h4>
+<pre>
+4
+1 3 4 11
+</pre>
+    <code>3 4</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n; // размер массива
+  cin >> n;
+
+  int d1, d2, diff;
+  cin >> d1; // первое число из массива
+  cin >> d2; // второе число из массива
+  diff = d2 - d1;
+  n--;
+  n--;
+  int prev = d2;
+
+  while (n--) {
+    int next;
+    cin >> next;
+    if (diff > next - prev) {
+      d1 = prev;
+      d2 = next;
+      diff = d2 - d1;
+    }
+    prev = next;
+  }
+
+  cout &lt;&lt; d1 &lt;&lt; ' ' &lt;&lt; d2;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача E. Контроль качества -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>Задача E. Контроль качества</h3>
 </article>
