--- a/src/components/alg/alg-conspect/courses/pages/elem-course-3.html
+++ b/src/components/alg/alg-conspect/courses/pages/elem-course-3.html
@@ -19,8 +19,12 @@
     <li><a href="#t1p7">Задача 3. Количество способов выйти m пассажирам на n остановках</a></li>
     <li><a href="#t1p8">Задача 4. Количество способов собрать команду из 4 человек, хотя бы с одной девочкой</a></li>
     <li><a href="#t1p9">Задача 5. Количество способов разбить 14 человек на пары</a></li>
-    <li><a href="#t1p10">Задача 6а. Найти сумму всех трехзначных чисел</a></li>
+    <li><a href="#t1p10">Задача 6а. Найти сумму всех трехзначных чисел из цифр 1,2,3,4</a></li>
+    <li><a href="#t1p11">Задача 6а2. Найти сумму всех трехзначных чисел из цифр 1,2,3,4,5</a></li>
+    <li><a href="#t1p12">Задача 6б. Найти сумму всех семизначных чисел из перестановок цифр 1,...,7</a></li>
   </ol>
+  <a href="#t2">Выводы</a>
+
 </article>
 
 
@@ -207,21 +211,80 @@
   <p>Ответ: 14! / (7! * 2<sup>7</sup>)</p>
 </article>
 
-<!-- Задача 6а. Найти сумму всех трехзначных чисел -->
+
+<!-- Задача 6а. Найти сумму всех трехзначных чисел из цифр 1,2,3,4 -->
 <article class="article">
   <div class="anchor" id="t1p10"></div>
-  <h3>Задача 6а. Найти сумму всех трехзначных чисел</h3>
+  <h3>Задача 6а. Найти сумму всех трехзначных чисел из цифр 1,2,3,4</h3>
 
   <p>Найти сумму всех трехзначных чисел, которые можно записать с помощью цифр 1, 2, 3, 4, если цифры могут повторяться.</p>
 
   <p>Когда задача очень сложная, то можно уменьшить задачу и начать с нее. Давайте начнем с однозначных чисел. Напишем все однозначные числа с помощью цифр 1, 2, 3, 4 это будут числа 1, 2 , 3, 4. Их сумма цифр 1+2+3+4. Здесь оказалось все очень просто.</p>
   <p>Сумма однозначных чисел 1+2+3+4</p>
-  <p>Теперь давайте попробуем с двузначными числами. Двузначные числа получаются из однозначных приписыванием одной цифры к началу числа. Напишем двузначные числа 11, 21, 31, 41, 12, 22, 32, 42, 13, 23, 33, 43, 14, 24, 34, 44. Посчитаем их сумму. Отдельно посчитаем единицы и десятки. Сумма единиц (1+2+3+4) * 4. Сумма десятков (1+2+3+4) * 4.</p>
-  <p>Сумма двузначных чисел (1+2+3+4) * 40 + (1+2+3+4) * 4</p>
+  <p>Теперь давайте попробуем с двузначными числами. Двузначные числа получаются из однозначных приписыванием одной цифры к началу числа. Напишем двузначные числа 11, 21, 31, 41, 12, 22, 32, 42, 13, 23, 33, 43, 14, 24, 34, 44. Посчитаем их сумму. Отдельно посчитаем единицы и десятки.</p>
+  <p>Сумма единиц (1+2+3+4) * 4.</p>
+  <p>Сумма десятков (1+2+3+4) * 4.</p>
+  <p>Сумма двузначных чисел (1+2+3+4) * 4 * 10 + (1+2+3+4) * 4</p>
   <p>Трехзначные числа. Если их делать из однозначных, то для каждой цифры в единицах можно слева приписать 4 варианта цифр для десятков и 4 варианта цифр для сотен. Всего 16 вариантов для каждого из 4 однозначных чисел.</p>
   <p>В рязряде единиц каждая цифра посчитается 16 раз</p>
-  <p>Сумма единиц трехзначных чисел (1+2+3+4) * 16.</p>
-  <p>Заметим, что в разряде десятков находятся те же цифры что и в разряде единиц. Поэтому сумма десятков трехзначных чисел также (1+2+3+4) * 16</p>
-  <p>Заметим, что и в разряде сотен находятся столько же цифр. Поэтому сумма сотен (1+2+3+4) * 16</p>
-  <p>Ответ: (1+2+3+4)*16 + (1+2+3+4)*16*10 + (1+2+3+4)*16*100 = (1+2+3+4)*16*111</p>
+  <p>Сумма единиц трехзначных чисел (1+2+3+4) * 4 * 4.</p>
+  <p>Заметим, что в разряде десятков находятся те же цифры что и в разряде единиц. Поэтому сумма десятков трехзначных чисел также (1+2+3+4) * 4 * 4</p>
+  <p>Заметим, что и в разряде сотен находятся столько же цифр. Поэтому сумма сотен (1+2+3+4) * 4 * 4</p>
+  <p>Ответ: (1+2+3+4)*4*4 + (1+2+3+4)*4*4*10 + (1+2+3+4)*4*4*100 = 10*16*111</p>
+</article>
+
+
+<!-- Задача 6а2. Найти сумму всех трехзначных чисел из цифр 1,2,3,4,5 -->
+<article class="article">
+  <div class="anchor" id="t1p11"></div>
+  <h3>Задача 6а2. Найти сумму всех трехзначных чисел из цифр 1,2,3,4,5</h3>
+
+  <p>Найти сумму всех трехзначных чисел, которые можно записать с помощью цифр 1, 2, 3, 4, 5, если цифры могут повторяться.</p>
+  <p>Сумма единиц (1+2+3+4+5)*5*5.</p>
+  <p>Сумма десятков (1+2+3+4+5)*5*5.</p>
+  <p>Сумма сотен (1+2+3+4+5)*5*5.</p>
+  <p>Ответ: (1+2+3+4+5)*5*5 + (1+2+3+4+5)*5*5*10 + (1+2+3+4+5)*5*5*100 = 15*25*111</p>
+</article>
+
+
+<!-- Задача 6б. Найти сумму всех семизначных чисел из перестановок цифр 1,...,7 -->
+<article class="article">
+  <div class="anchor" id="t1p12"></div>
+  <h3>Задача 6б. Найти сумму всех семизначных чисел из перестановок цифр 1,...,7</h3>
+
+  <p>Найдите сумму всех семизначных чисел, которые можно получить всевозможными перестановками цифр 1,...,7.</p>
+  <p>Эта задача отличается от задачи 6а. В задаче 6а цифры могли повторяться. В задаче 6б считать нужно только перестановки цифр. Это значит что цифры повторяться не должны.</p>
+  <p>Если в семиразрядном числе зафиксировать одну цифру, например последнюю, то перестановками оставшихся 6 цифр мы получим все варианты с этой цифрой на конце. Перестановки из 6 цифр это 6!.</p>
+  <p>Сумма единиц (1+2+3+4+5+6+7)*6! = 28*6!</p>
+  <p>Сумма десятков (1+2+3+4+5+6+7)*6! = 28*6!</p>
+  <p>В любом разряде будет сумма 28!*6</p>
+  <p>Каждый разряд умножим на нужную степень 10, вынесем за скобки множитель 28*6!, в скобках сложим все степени 10 и получим ответ.</p>
+  <p>Ответ: 28*6!*1111111</p>
+</article>
+
+
+<!-- Выводы -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>Выводы</h3>
+
+  <p>Для решения задач можно применять четыре действия:</p>
+  <ol>
+    <li>
+      <h4>Сложение</h4>
+      <p>Когда считаем разные группы вариантов</p>
+    </li>
+    <li>
+      <h4>Вычитание</h4>
+      <p>Когда нужно убрать лишние варианты</p>
+    </li>
+    <li>
+      <h4>Умножение</h4>
+      <p>Когда на каждый из вариантов одной позиции есть каждый из вариантов другой позиции</p>
+    </li>
+    <li>
+      <h4>Деление</h4>
+      <p>Когда все варианты поделились на группы одинаковых с равным числом элементов в каждой группе</p>
+    </li>
+  </ol>
 </article>
