--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -1186,9 +1186,129 @@ void f() {
 
       <p>При этом в каждом файле создастся своя переменная k. И это будут три разные переменные.</p>
     </li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>
+      <h4>Локальные static переменные</h4>
+      <p>Локальная переменная создается и видна только внутри функции. При каждом вызове функии переменная создается, при выходе из функции переменная уничтожается. В примере, функция всегда будет возвращать 1.</p>
+<pre>
+int f() {
+  int c = 0;
+  c = c + 1;
+  return c;
+}
+</pre>
+    <p>Локальная переменная, созданная с помощью ключевого слова static создается один раз - при первом вызове функции, видна только внутри функции, не уничтожается и сохраняет свои значения между вызовами функции. В примере, статическая переменная будет служит счетчиком вызовов функции. Функция всегда будет возвращать число своих вызовов.</p>
+<pre>
+int f() {
+  static int c = 0;
+  c = c + 1;
+  return c;
+}
+</pre>
+    <p>Можно инициализировать такой счетчик параметром функции.</p>
+<pre>
+int f(int k) {
+  static int c = k;
+  c = c + 1;
+  return c;
+}
+</pre>
+    <p>Инструкция после слова static выполнится только один раз - при первом вызове функции.</p>
+    </li>
+    <li>
+      <h4>static функции</h4>
+      <p>По умолчанию все функции объявляются как внешние (с ключевым словом extern). Они имеют глобальную область видимости и видны во всех файлах. Такие функции можно вызывать из любого модуля.</p>
+      <code>void f(); то же что и extern void f()</code>
+      <p>Ключевое слово static запрещает использование функции из другого модуля. В этом случае происходит внутренняя линковка.</p>
+      <code>statis void f();</code>
+      <p>При этом можно объявлять статические функции с одинаковыми именами в разных файлах. Они имеют локальную область видимости.</p>
+      <p>Пусть в заголовочном файле есть статические переменные и функции</p>
+      <p>Файл header.h</p>
+<pre>
+statis int c = 0;
+static void f() {}
+</pre>
+      <p>Если функция не будет объявлена как статическая и заголовочный файл будет подключен к нескольким файлам, то у нас будет несколько глобальных функций с одинаковым именем, что является ошибкой.</p>
+    </li>
+    <li>
+      <h4>static поле класса</h4>
+      <p>Переменная объявленная внутри класса с ключевым словом static является глобальной переменной, которая видна только внутри класса, но не содержится в экземпляре объекта.</p>
+<pre>
+class Process {
+public:
+  Process() { c++; }
+  ~Process() {c--; }
+  statis int c;
+};
+</pre>
+    <p>К статической переменной класса можно получить доступ вне класса, даже если не создан ни один объект. Потому что эта переменная не содержится в экземпляре объекта.</p>
+    <code>Process::c;</code>
+    <p>Хорошо делать инкапсуляцию, чтобы к переменной можно было обратиться только через функцию getCounnter</p>
+<pre>
+class Process {
+private:
+  statis int c;
+
+public:
+  Process() { c++; }
+  ~Process() {c--; }
+  getCounter() {
+    return c;
+  }
+};
+
+Process::getCounter;
+</pre>
+    <p>Инициализировать статическое поле класса нужно в файле .cpp</p>
+    <code>int Process::c = 0;</code>
+    </li>
+
+    <li>
+      <h4>static метод класса</h4>
+      <p>Статический метод класса имеет доступ к приватным полям класса.</p>
+<pre>
+class Process {
+private:
+  int d;
+
+public:
+  static void f(Process p) {
+    p.d = 10;
+  }
+}
+</pre>
+    <p>Статический метод существует независимо от объекта и может быть вызван через пространство имен класса</p>
+    <code>Process::f(p);</code>
+    </li>
   </ol>
+
+  <h3>Ключевое слово inline</h3>
+  <p>Мы можем объявить функцию f() внутри заголовочного файла f.h и включить ее в несколько .cpp файлов: 1.cpp, 2.cpp, 3.cpp. При компиляции будет ошибка, потому что мы получим три функции с одинаковым именем.</p>
+  <p>Чтобы решить эту проблему, внутри заголовочного файла f.h создадим класс F, внутри которого объявим метод f(). Функции, созданные внутри класса автоматически становятся inline функциями.</p>
+
+  <h3>Структуры</h3>
+<pre>
+struct Point {
+  double x,
+  double y,
+  double z
+};
+
+Point p;
+p.x = 10;
+</pre>
+
+<pre>
+struct Point {
+  double norm() {
+    return sqrt(x*x+y*y+z*z);
+  }
+}
+</pre>
+</article>
+
+
+<!-- Урок 9 -->
+<article class="article">
+  <div class="anchor" id="p9"></div>
+  <h3>Урок 9</h3>
 </article>
