--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -1311,4 +1311,144 @@ struct Point {
 <article class="article">
   <div class="anchor" id="p9"></div>
   <h3>Урок 9</h3>
+
+  <h4>Выделение объектов на стеке</h4>
+
+<pre>
+int a = 3;
+int *pa;
+pa = &amp;a;
+</pre>
+
+<pre>
+Complex c(3,3);
+Complex *pc;
+pc = &amp;c;
+</pre>
+
+  <p>Внутри функции foo создается объект a, память для которого выделяется на стеке. При выходе из функции вся память выделенная на стеке уничтожается. Функция возвращает указатель на уже не существующую память.</p>
+<pre>
+Complex *foo() {
+  Complex a(3,3);
+  return &amp;a;
+}
+</pre>
+
+  <p>Для таких объектов нужно выделять память на куче.</p>
+
+  <h4>Освобождение объектов на стеке</h4>
+  <p>Память на стеке освобождается только при выходе из функции. Это делается автоматически.</p>
+
+  <h4>Выделение объектов на куче</h4>
+  <p>Выделение памяти на куче происходит при помощи оператора new.</p>
+  <code>Complex *pc = new Complex(); // контруктор по умолчанию</code>
+  <code>Complex *pc = new Complex(3,3); // конструктор с параметрами</code>
+
+  <p>Если нужно выделять массив объектов на куче, то тоже можно воспользоваться оператором new. Синтаксис new не предусматривает после себя ничего кроме имени типа. Поэтому тип обязательно должен иметь конструктор по умолчанию, иначе такой код не скомпилируется.</p>
+  <code>Complex *pArr = new Complex[100];</code>
+
+  <h4>Освобождение объектов на куче</h4>
+  <p>Освобождение памяти на куче происходит при помощи оператора delete</p>
+  <code>delete pc;</code>
+  <code>delete [] pArr;</code>
+
+  <p>Оператор языка Си free освобождает память и ничего не знает об объектах. Оператор языка C++ delete знает про объекты и прежде чем освободить память, вызывает деструктор.</p>
+
+  <p>Если у объекта нужно вызвать функцию, то синтаксис позволяет использовать два варианта: через точку и через стрелочку</p>
+  <code>(*pc).getValue();</code>
+  <code>pc->getValue();</code>
+
+  <p>Следующий код скомпилируется, потому что компилятор ошибку не заметит. Но будет ошибка во время выполнения программы.</p>
+<pre>
+Complex c(3,3);
+Complex *pc = 0;
+pc->add(c);
+</pre>
+
+  <p>При создании объекта на куче, нужно не забывать его освобождать</p>
+<pre>
+Complex *pc = new Complex(3,3);
+delete pc;
+</pre>
+
+  <p>Для того чтобы объект всегда уничтожался, можно сделать класс-обертку над указателем и в деструкторе прописать для него delete. Это называется умный указатель smart pointer.</p>
+  <p>Рассмотрим 3 случая когда класс A зависит от класса B.</p>
+  <p>Класс A содержит указатель</p>
+<pre>
+class A {
+  B& b;
+}
+</pre>
+  <p>Класс A содержит указатель на класс B.</p>
+<pre>
+class A {
+  B *b;
+}
+</pre>
+  <p>Класс A содержит класс B как поле.</p>
+<pre>
+class A {
+  B b;
+}
+</pre>
+</article>
+
+
+<!-- Урок 10 -->
+<article class="article">
+  <div class="anchor" id="p10"></div>
+  <h3>Урок 10</h3>
+
+  <h4>Умные указатели Smart Pointers</h4>
+  <p>Напишем scoped_ptr - оболочку для указателя. Пусть нам нужно выделить на куче объект с помощью new, который будет виден только в пределах фигурных скобок области видимости. Пусть при выходе из области видимости автоматически вызывается delete для созданного объекта.</p>
+  <p>Файл scoped_ptr.h</p>
+<pre>
+#pragma once
+
+class scoped_ptr {
+private:
+  Object *pObj;
+
+public:
+  scoped_ptr(Object *pObject);
+  ~scoped_ptr();
+  Object *ptr;
+}
+</pre>
+
+  <p>Файл scoped_ptr.cpp</p>
+<pre>
+scoped_ptr::scoped_ptr(Object *pObject) {
+  pObj = pObject;
+}
+scoped_ptr::~scoped_ptr() {
+  deletepObj;
+}
+Object *scoped_ptr::ptr() {
+  return pObj;
+}
+</pre>
+
+  <p>Файл main.cpp</p>
+<pre>
+int main() {
+  if (true) {
+    scoped_ptr p = new Object();
+  }
+}
+</pre>
+  <p>Когда закончится область видимости объекта, то деструктор удалит объект из памяти.</p>
+
+  <p>Если мы создадим второй умный указатель на ту же область памяти, то эта память удалится дважды</p>
+
+  <p>Файл main.cpp</p>
+<pre>
+int main() {
+  if (true) {
+    scoped_ptr p1 = new Object();
+    scoped_ptr p2 = p1;
+  }
+}
+</pre>
+<p>Когда программа дойдет до закрывающей скобки. То начнут срабатывать деструкторы. Первым сработает деструктор объекта p1 и удалит объект из памяти. Теперь объект p2 указывает на удаленный объект, которого уже нет. Вторым сработает деструктор объекта p2 и это вызовет ошибку.</p>
 </article>
