--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -1403,8 +1403,6 @@ class A {
   <p>Напишем scoped_ptr - оболочку для указателя. Пусть нам нужно выделить на куче объект с помощью new, который будет виден только в пределах фигурных скобок области видимости. Пусть при выходе из области видимости автоматически вызывается delete для созданного объекта.</p>
   <p>Файл scoped_ptr.h</p>
 <pre>
-#pragma once
-
 class scoped_ptr {
 private:
   Object *pObj;
@@ -1413,7 +1411,7 @@ public:
   scoped_ptr(Object *pObject);
   ~scoped_ptr();
   Object *ptr;
-}
+};
 </pre>
 
   <p>Файл scoped_ptr.cpp</p>
@@ -1441,7 +1439,8 @@ int main() {
 
   <p>Если мы создадим второй умный указатель на ту же область памяти, то эта память удалится дважды</p>
 
-  <p>Файл main.cpp</p>
+  <p>Рассмотрим два примера.</p>
+  <p>Первый пример. Файл main.cpp</p>
 <pre>
 int main() {
   if (true) {
@@ -1450,5 +1449,34 @@ int main() {
   }
 }
 </pre>
-<p>Когда программа дойдет до закрывающей скобки. То начнут срабатывать деструкторы. Первым сработает деструктор объекта p1 и удалит объект из памяти. Теперь объект p2 указывает на удаленный объект, которого уже нет. Вторым сработает деструктор объекта p2 и это вызовет ошибку.</p>
+  <p>Когда программа дойдет до закрывающей скобки. То начнут срабатывать деструкторы. Первым сработает деструктор объекта p1 и удалит объект из памяти. Теперь объект p2 указывает на удаленный объект, которого уже нет. Вторым сработает деструктор объекта p2 и это вызовет ошибку.</p>
+
+  <p>Второй пример. Файл main.cpp</p>
+<pre>
+int main() {
+  if (true) {
+    scoped_ptr p1 = new Object();
+    scoped_ptr p2 = new Object();
+    p2 = p1;
+  }
+}
+</pre>
+  <p>Сначала произойдет утечка памяти когда указатель p2 отвязывается от второго объекта и начинает показывать на первый объект. Потом программа дойдет до закрывающей скобки и произойдет проблема, как и в прошлый раз.</p>
+  <p>Для решения этой проблемы надо запретить конструктор копирования и оператор присваивания для объектов scoped_ptr. Для этого в классе scoped_ptr сделаем приватные конструктор копирования и оператор присваивания.</p>
+  <p>Файл scoped_ptr.h</p>
+<pre>
+class scoped_ptr {
+private:
+  Object *pObj;
+
+public:
+  scoped_ptr(Object *pObject);
+  ~scoped_ptr();
+  Object *ptr;
+
+private:
+  scoped_ptr(const scoped_ptr &p);
+  scoped_ptr& operator=(const scoped_ptr &p);
+};
+</pre>
 </article>
